[workspace]
members = ["cli", "lib"]
default-members = ["cli"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Anastasiya Polina Soyka <apsoyka@protonmail.com>"]
edition = "2021"
description = "CipherTool is a Rust application for generating and analyzing data."
readme = "README.md"
repository = "https://github.com/AnastasiyaSoyka/ciphertool"
license = "MIT"
keywords = ["cryptography", "entropy", "password"]
