[package]
name = "cli"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
lib = { path = "../lib" }
log = "0.4.19"
env_logger = "0.11.2"
clap = { version = "4.3.8", features = ["derive"] }
rand = "0.8.5"
zstd = "0.13.1"
sha1 = "0.10.6"
sha2 = "0.10.8"
digest = "0.10.7"
hex = "0.4.3"
rayon = "1.10.0"
bytesize = "1.2.0"

[[bin]]
name = "ciphertool"
path = "src/main.rs"
