[package]
name = "lib"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
base64 = "0.21.2"
hex = "0.4.3"
log = "0.4.19"
rand = "0.8.5"
sha1 = "0.10.6"
sha2 = "0.10.8"
digest = "0.10.7"
serde = { version = "1.0.203", features = ["derive"] }
zstd = "0.13.1"
bincode = "1.3.3"
directories = "5.0.1"
tabled = "0.15.0"
bytesize = "1.2.0"
md-5 = "0.10.6"
png = "0.17.13"
